test_regress/t/t_randomize_inline_var_ctl_unsup_1.out
%Error-UNSUPPORTED: t/t_randomize_inline_var_ctl_unsup.v:21:37: Unsupported: complex expression as 'randomize()' argument
                                                              : ... note: In instance 't'
   21 |       void'(foo.randomize(Foo::get().x));
      |                                     ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randomize_inline_var_ctl_unsup.v:22:34: Unsupported: complex expression as 'randomize()' argument
                                                              : ... note: In instance 't'
   22 |       void'(foo.randomize(foos[0].x));
      |                                  ^
%Error-UNSUPPORTED: t/t_randomize_inline_var_ctl_unsup.v:23:27: Unsupported: 'randomize(null)'
                                                              : ... note: In instance 't'
   23 |       void'(foo.randomize(null));
      |                           ^~~~
%Error: Exiting due to
